--- a/config/database.yml
+++ b/config/database.yml
@@ -6,6 +6,9 @@ default: &default
 development:
   <<: *default
   database: blog-app_development
+  username: <%= ENV.fetch("DATABASE_USERNAME") {'postgres'} %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD") {'postgres'} %>
+
 
  
 test:
