--- a/config/database.yml
+++ b/config/database.yml
@@ -6,18 +6,19 @@ default: &default
 development:
   <<: *default
   database: blog-app_development
-  #username: <%= ENV.fetch("DATABASE_USERNAME") {'postgres'} %>
-  #password: <%= ENV.fetch("DATABASE_PASSWORD") {'postgres'} %>
-  username: postgres
-  password: Eduardo1!@
+  username: <%= ENV.fetch("DATABASE_USERNAME") {'postgres'} %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD") {'Martial@5009'}%>
+  # username: postgres
+  # password: Eduardo1!@
   host: localhost
 
- 
+
 test:
   <<: *default
   database: blog-app_test
   username: postgres
-  password: Eduardo1!@
+  password: <%= ENV.fetch("DATABASE_PASSWORD") {'Martial@5009'}%>
+  # password: Eduardo1!@
   host: localhost
 
 production:
