--- a/config/database.yml
+++ b/config/database.yml
@@ -6,10 +6,10 @@ default: &default
 development:
   <<: *default
   database: blog-app_development
-  username: <%= ENV.fetch("DATABASE_USERNAME") {'postgres'} %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD") {'Martial@5009'}%>
-  # username: postgres
-  # password: Eduardo1!@
+  #username: <%= ENV.fetch("DATABASE_USERNAME") {'postgres'} %>
+  #password: <%= ENV.fetch("DATABASE_PASSWORD") {'Martial@5009'}%>
+  username: postgres
+  password: Eduardo1!@
   host: localhost
 
 
@@ -17,8 +17,8 @@ test:
   <<: *default
   database: blog-app_test
   username: postgres
-  password: <%= ENV.fetch("DATABASE_PASSWORD") {'Martial@5009'}%>
-  # password: Eduardo1!@
+  #password: <%= ENV.fetch("DATABASE_PASSWORD") {'Martial@5009'}%>
+  password: Eduardo1!@
   host: localhost
 
 production:
