--- a/config/database.yml
+++ b/config/database.yml
@@ -7,10 +7,10 @@ development:
   <<: *default
   database: blog-app_development
   username: <%= ENV.fetch("DATABASE_USERNAME") {'postgres'} %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD") {'postgres'} %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD") {'postgres} %>
 
 
- 
+
 test:
   <<: *default
   database: blog-app_test
