--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,13 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
   database: blog-app_development
   username: <%= ENV.fetch("DATABASE_USERNAME") {'postgres'} %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD") {'postgres'} %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD") {'Martial@5009'} %>
 
-
- 
 test:
   <<: *default
   database: blog-app_test
